--- a/surveyform/styles.css
+++ b/surveyform/styles.css
@@ -6,31 +6,84 @@ body{
      background-repeat: no-repeat;
      background-position: center;
      text-align: center;
-     width: 50%;
-     margin: auto;
      color: white;
      padding: 3%;
-    
+     font-family: Arial, Helvetica, sans-serif;
 }
 
 form{
     background-color: rgba(27, 27, 50, 0.8);
     padding: 2.5em;
     text-align: left;
+    border-radius: 5px;
+    width: 55%;
+    margin: auto;
 }
 
 h1{
-    font-size: 150%;
+    font-size: 200%;
+    letter-spacing: 1px;
 }
 
+.space{
+    margin-top: 4%;
+}
+p{
+    margin: 0%;
+    margin-top: 6%;
+    font-size: larger;
+}
 #title-p{
     font-style: italic;
-    font-size: 200%;
+    font-size: 100%;
+    letter-spacing: 1px;
+    margin: 0;
+    margin-bottom: 3%;
+    line-height: 10px;
 }
 label{
     display: block;
+    font-size: larger;
 }
 .inp{
     display: block;
     width: 100%;
+    height: 30px;
+    margin: 2% 0;
+    border-radius: 5px;
+}
+::placeholder{
+    padding: 2%;
+}
+.red{
+    margin: 2% 1% 2% 0;
+    min-width: 1rem;
+    min-height: 1rem;
+}
+#role, #role1, .grey{
+    color: grey;
+    padding-left: 2%;
+    border-radius: 5px;
+}
+
+option{
+    color: black;
+}
+textarea{
+    display: block;
+    width: 100%;
+    height: 120px;
+    margin: 2% 0;
+    border-radius: 5px;
+}
+
+input[type=submit]{
+    width: 100%;
+    height: 40px;
+    margin-top: 2%;
+    background-color: #37af65;
+    color: white;
+    font-size: larger;
+    border: none;
+    border-radius: 5px;
 }
