--- a/surveyform/styles.css
+++ b/surveyform/styles.css
@@ -60,7 +60,7 @@ label{
     min-width: 1rem;
     min-height: 1rem;
 }
-#role, #role1, .grey{
+#dropdown, #role1, .grey{
     color: grey;
     padding-left: 2%;
     border-radius: 5px;
@@ -77,7 +77,7 @@ textarea{
     border-radius: 5px;
 }
 
-input[type=submit]{
+#submit{
     width: 100%;
     height: 40px;
     margin-top: 2%;
